# ed25519

./: CMakeLists.txt
tests/: CMakeLists.txt  test.c
